[gd_scene load_steps=11 format=2]

[ext_resource path="res://game/cursor.gd" type="Script" id=2]
[ext_resource path="res://Shared/Art/Icons/info_icon.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=3]
region = Rect2( 0, 224, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
region = Rect2( 16, 224, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
region = Rect2( 32, 224, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
region = Rect2( 48, 224, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
region = Rect2( 64, 224, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
region = Rect2( 80, 224, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 24.0416

[node name="Cursor" type="Area2D"]
z_index = 10
script = ExtResource( 2 )

[node name="Player" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.75, 0.75 )

[node name="Dice" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 3.11, 3.11 )
frames = SubResource( 9 )
frame = 1
playing = true

[node name="Info" type="Sprite" parent="."]
visible = false
position = Vector2( -1.90735e-06, 0 )
scale = Vector2( 0.0471939, 0.0471939 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.5, 0.499997 )
scale = Vector2( 2.55, 2.55 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="." to="." method="_on_cursor_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_cursor_area_exited"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
